--- a/NaiveBayesClassifier.ipynb
+++ b/NaiveBayesClassifier.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "268e7a0e-fde8-427f-8edb-d740c00d89d8",
    "metadata": {},
    "outputs": [
@@ -53,6 +53,52 @@
     "yes_train = X_Train[:3,:]\n",
     "print(yes_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "df6e2667-1150-4ddd-b12c-6c29ccbdda9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.66666667 0.66666667 0.         0.66666667 0.66666667 0.66666667]\n"
+     ]
+    }
+   ],
+   "source": [
+    "yes_one_prob = yes_train.sum(axis= 0)/ yes_train.shape[0]\n",
+    "print(yes_one_prob)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "01298b8a-4c63-41b6-ab64-899f9d5e0a19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.33333333 0.33333333 1.         0.33333333 0.33333333 0.33333333]\n"
+     ]
+    }
+   ],
+   "source": [
+    "yes_zero_prob = 1 - yes_one_prob\n",
+    "print(yes_zero_prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cefa56f-228f-4166-8689-a9d0a8558488",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
