Google Stock Price RNN

--- a/Google_Stock _Price.ipynb
+++ b/Google_Stock _Price.ipynb
@@ -364,12 +364,12 @@
     }
    ],
    "source": [
-    "regressor.fit(X_train, y_train, epochs= 100, batch_size = 32)"
+    "regressor.fit(X_train, y_train, epochs= 10, batch_size = 32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "86dceadc-b11c-445b-bafe-977efcf54e78",
    "metadata": {},
    "outputs": [],
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "a836e915-378c-4603-a497-c662982b0bd6",
    "metadata": {},
    "outputs": [
@@ -388,15 +388,115 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arhamsoft\\AppData\\Local\\Temp\\ipykernel_18284\\2889304221.py:2: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
+      "C:\\Users\\Arhamsoft\\AppData\\Local\\Temp\\ipykernel_18284\\3052177342.py:2: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
       "  inputs = dataset_total[len(dataset_total) - len(dataset_test) - 60:].values\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(80,)\n",
+      "[779.   779.66 777.71 786.66 783.76 781.22 781.65 779.8  787.85 798.24\n",
+      " 803.3  795.   804.9  816.68 806.34 801.   808.35 795.47 782.89 778.2\n",
+      " 767.25 750.66 774.5  783.4  779.94 791.17 756.54 755.6  746.97 755.2\n",
+      " 766.92 771.37 762.61 772.63 767.73 764.26 760.   771.53 770.07 757.44\n",
+      " 744.59 757.71 764.73 761.   772.48 780.   785.04 793.9  797.4  797.34\n",
+      " 800.4  790.22 796.76 795.84 792.36 790.9  790.68 793.7  783.33 782.75\n",
+      " 778.81 788.36 786.08 795.26 806.4  807.86 805.   807.14 807.48 807.08\n",
+      " 805.81 805.12 806.91 807.25 822.3  829.62 837.81 834.71 814.66 796.86]\n",
+      "(80, 1)\n",
+      "[[779.  ]\n",
+      " [779.66]\n",
+      " [777.71]\n",
+      " [786.66]\n",
+      " [783.76]\n",
+      " [781.22]\n",
+      " [781.65]\n",
+      " [779.8 ]\n",
+      " [787.85]\n",
+      " [798.24]\n",
+      " [803.3 ]\n",
+      " [795.  ]\n",
+      " [804.9 ]\n",
+      " [816.68]\n",
+      " [806.34]\n",
+      " [801.  ]\n",
+      " [808.35]\n",
+      " [795.47]\n",
+      " [782.89]\n",
+      " [778.2 ]\n",
+      " [767.25]\n",
+      " [750.66]\n",
+      " [774.5 ]\n",
+      " [783.4 ]\n",
+      " [779.94]\n",
+      " [791.17]\n",
+      " [756.54]\n",
+      " [755.6 ]\n",
+      " [746.97]\n",
+      " [755.2 ]\n",
+      " [766.92]\n",
+      " [771.37]\n",
+      " [762.61]\n",
+      " [772.63]\n",
+      " [767.73]\n",
+      " [764.26]\n",
+      " [760.  ]\n",
+      " [771.53]\n",
+      " [770.07]\n",
+      " [757.44]\n",
+      " [744.59]\n",
+      " [757.71]\n",
+      " [764.73]\n",
+      " [761.  ]\n",
+      " [772.48]\n",
+      " [780.  ]\n",
+      " [785.04]\n",
+      " [793.9 ]\n",
+      " [797.4 ]\n",
+      " [797.34]\n",
+      " [800.4 ]\n",
+      " [790.22]\n",
+      " [796.76]\n",
+      " [795.84]\n",
+      " [792.36]\n",
+      " [790.9 ]\n",
+      " [790.68]\n",
+      " [793.7 ]\n",
+      " [783.33]\n",
+      " [782.75]\n",
+      " [778.81]\n",
+      " [788.36]\n",
+      " [786.08]\n",
+      " [795.26]\n",
+      " [806.4 ]\n",
+      " [807.86]\n",
+      " [805.  ]\n",
+      " [807.14]\n",
+      " [807.48]\n",
+      " [807.08]\n",
+      " [805.81]\n",
+      " [805.12]\n",
+      " [806.91]\n",
+      " [807.25]\n",
+      " [822.3 ]\n",
+      " [829.62]\n",
+      " [837.81]\n",
+      " [834.71]\n",
+      " [814.66]\n",
+      " [796.86]]\n"
      ]
     }
    ],
    "source": [
     "dataset_total = pd.concat((dataset_train['Open'], dataset_test['Open']), axis= 0)\n",
     "inputs = dataset_total[len(dataset_total) - len(dataset_test) - 60:].values\n",
+    "print(inputs.shape)\n",
+    "print(inputs)\n",
     "inputs = inputs.reshape(-1, 1)\n",
+    "print(inputs.shape)\n",
+    "print(inputs)\n",
     "inputs = sc.transform(inputs)\n",
     "X_test = []\n",
     "for i in range(60, 80):\n",
